sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/InvalidClassname1.java
/*
 * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * SPDX-License-Identifier: EPL-2.0
 */

package org.example;

public interface InvalidClassname1 extends java.io.Serializable {

   public java.util.List getEmail();

   public void setEmail(java.util.List value);

   public java.util.List getPhone();

   public void setPhone(java.util.List value);

   public java.lang.String getCustID();

   public void setCustID(java.lang.String value);


}

